--- a/index.html
+++ b/index.html
@@ -2,45 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>header</header>
-    <main>  
-        <div class="bg">
-            <div class="bg_opacity"></div>
-            <div class="bg_down"></div>
-            <div class="plan_you_trip"></div>
-            <div class="frame30"></div>
-            <div class="destination">
-                <div class="slider">
-                    <img class="slider__sea" src="/img/Rectangle 23.png" alt="slider__sea">
-                    <img class="slider__japan" src="/img/Rectangle 24.png" alt="slider__japan">
-                    <img class="slider__usa" src="/img/Rectangle 25.png" alt="slider__usa">                
-                </div>
-            </div>
-            <div class="stories"></div>
-            <h2 class="travel_stories">TRAVEL STORIES</h2>
-            <div class="stories__thai"><img class="img__stories" src="/img/Rectangle 29.png" alt="stories__Thai"></div>
-            <div class="stories__national_park"><img class="img__stories" src="/img/Rectangle 30.png" alt="stories__national_park"></div>
-            <div class="stories__mountains"><img class="img__stories" src="/img/Rectangle 31.png" alt="stories__mountains"></div>
-            <div class="stories__journey"> <img class="img__stories" src="/img/Rectangle 32.png" alt="stories__journey"></div>
-            <div class="social">
-                <img class="social__icon" src="/img/akar-icons_instagram-fill.png" alt="">
-                <img class="social__icon" src="/img/akar-icons_video.png" alt="">
-                <img class="social__icon" src="/img/akar-icons_twitter-fill.png" alt="">
-            </div>
-
-        </div>   
+   <header><ul>
+       <li></li>
+       <li></li>
+       <li></li>
+       <li></li>
+   </ul></header>
+    <main>
+        <section class="plan_trip"><h1>Explore the beauty of the World</h1></section>
+        <section class="3_steps"><h2>3 STEPS TO THE PERFECT TRIP</h2></section>
+        <section class="destination"><h2>POPULAR DESTINATIONS</h2></section>
+        <section class="stories"><h2>TRAVEL STORIES</h2></section>
         
     </main>
-    <footer>All Rights Reserved © Travel Portal
-        <!-- <div class="social_media"><img class="insta" src="/img/akar-icons_instagram-fill.png" alt=""></div> -->
-    </footer>
+    <footer><ul>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul></footer> 
 </body>
 </html>
