--- a/index.html
+++ b/index.html
@@ -5,26 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-   <header><ul>
-       <li></li>
-       <li></li>
-       <li></li>
-       <li></li>
-   </ul></header>
+    <header>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </header>
     <main>
-        <section class="plan_trip"><h1>Explore the beauty of the World</h1></section>
-        <section class="3_steps"><h2>3 STEPS TO THE PERFECT TRIP</h2></section>
-        <section class="destination"><h2>POPULAR DESTINATIONS</h2></section>
-        <section class="stories"><h2>TRAVEL STORIES</h2></section>
+        <section class="preview"><h1>Explore the beauty of the World</h1></section>
+        <section class="steps"><h2>3 STEPS TO THE PERFECT TRIP!</h2></section>
+        <section class="destinations">
+            <h2>POPULAR DESTINATIONS</h2>
+            <div class="destinations__slider">
+                <img class="destinations__slider__sea" src="/img/Rectangle 23.png" alt="slider__sea">
+                <img class="destinations__slider__japan" src="/img/Rectangle 24.png" alt="slider__japan">
+                <img class="destinations__slider__usa" src="/img/Rectangle 25.png" alt="slider__usa">                
+            </div>
+        </section>
+        
+        <section class="stories">
+            <!-- <h2 class="stories__head">TRAVEL STORIES</h2> -->
+            <!-- <div class="stories__bg"></div> -->
+        </section>
         
     </main>
-    <footer><ul>
-        <li></li>
-        <li></li>
-        <li></li>
-    </ul></footer> 
+    <footer>FOOTER
+
+    </footer> 
 </body>
 </html>
