--- a/index.html
+++ b/index.html
@@ -34,8 +34,17 @@
  
  <main class="main">
     <section class="preview">
-        <div class="preview__background">
-         <div class="preview__container"><h1>Explore the beauty of the World</h1></div>  
+        <!-- <div class="preview__background"> -->
+        <div class="preview__head">
+            <h1 class="preview__h1">Explore the beauty of<br/> the World</h1>
+            <div class="preview__text">Receive personalized recommendations for countries, hotels, activities and more</div> 
+        <!-- </div> -->
+        <div class="preview__search_form">
+            <form class="preview__search" action=" ">
+                <input type="text" placeholder="What would you like to do?" name="search" class="hole">
+        </div>
+
+        </form>
         </div>
     </section>
     <section class="steps"></section>
